# prediction-trading-framework

./: .gitignore  KalshiClient.py  README.md  config.py  env_example.env  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
src/: config.py  main.py
src/kalshi/: __init__.py  client.py  models.py  rate_limit.py
src/observability/: __init__.py  models.py  recorder.py  sinks.py
src/trading/: __init__.py  bus.py  models.py
src/trading/execution/: __init__.py  engine.py
src/trading/execution/adapters/: __init__.py  base.py  kalshi.py
src/trading/market_state/: __init__.py  service.py
src/trading/portfolio/: __init__.py  manager.py
src/trading/resolvers/: __init__.py  resolver.py  subject.py  weather_resolver.py
src/trading/strategy/: __init__.py  orchestrator.py  protocol.py  resolver.py  stub.py
tests/: conftest.py
tests/integration/: test_kalshi_client_integration.py  test_kalshi_client_live_trading_integration.py
tests/unit/: conftest.py  test_config.py  test_kalshi_client_async.py  test_kalshi_client_async_behavior.py  test_kalshi_client_public_methods.py  test_kalshi_client_retries.py  test_observability_logging.py  test_strategy_stub.py  test_subject_and_weather_resolver.py  test_trading_plumbing.py
