[project]
name = "kalshi-trading-toolkit"
version = "0.1.0"
description = "Prediction-market trading framework."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
markers = [
    "integration: tests that hit the real network and require Kalshi credentials",
    "live_trading: opt-in tests that place real demo orders",
]
